fix: adjust spacing and size of nested timeline button

--- a/app/styles/components/timeline.styl
+++ b/app/styles/components/timeline.styl
@@ -12,3 +12,8 @@
 	.events
 		padding-bottom initial
 		overflow-x initial
+.link-action
+	& + &
+		margin-top 0.5em
+		.fork-event
+			padding 0.5em
